<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="hello">Bienvenue</string>
    <string name="app_name">JCertif</string>
    <string name="search_description">Search patient</string>
    <string name="search_hint">A patient</string>

    <!-- Title For the Title Bar -->
    <string name="main_htitle">Home</string>
    <string name="speaker_htitle">Présentateur</string>
    <string name="speaker_list_htitle">Présentateurs</string>
    <string name="sessions_list_htitle">Présentations</string>
    <string name="session_htitle">Présentation</string>
    <string name="connexion_htitle">Connexion</string>
    <string name="calendar_htitle">Calendrier</string>
    <string name="agenda_htitle">Agenda</string>
    <string name="info_htitle">Info</string>

    <!-- Speakers -->
    <string name="speakerFirstNameLabel">Prénom : </string>
    <string name="speakerLastNameLabel">Nom : </string>
    <string name="speakerBioLabel">Biographie</string>
    <string name="speakerCompanyLabel">Compagnie : </string>

    <!-- Session List -->


    <!-- Session detail -->
    <string name="session_detail_speaker_title">Conférencier</string>

    <!-- Connection -->
    <!-- <string name="email_header_title">Connexion</string> -->
    <string name="emailLabel">Email</string>
    <string name="emailConfirmationLabel">Confirmation Email</string>
    <string name="passwordLabel">Mot de passe </string>
    <string name="passwordConfirmationLabel">Confirmation Mot de passe </string>
    <string name="subscriptionLabel">S\'ENREGISTRER</string>

    <!-- Account profile dialogs -->
    <string name="accountProfileLabel">Creation compte [profile] </string>
    <string name="accountInformationLabel">Creation compte [information] </string>

    <!-- Account profile dialogs -->
    <string name="accountToastMessage">Compte courant :%1$s</string>
    <string name="accountToastMessageNoUser">Pas de compte enregistré.</string>

    <!-- Menu profile dialogs -->
    <string name="menu_forceupdate">Mises A Jour données</string>
    <string name="menu_disconnect_user">Déconnection utilisateur</string>
    <string name="menu_connect_user">Connection utilisateur</string>
    <string name="menu_actions">Actions</string>
    <string name="menu_search">Trouver</string>
    <string name="menu_share">Trouver</string>

    <!-- Buttons -->
    <string name="quitButtonLabel">QUITTER</string>
    <string name="connectButtonLabel">CONNECTER</string>
    <string name="skipButtonLabel">SKIP</string>
    <string name="saveButtonLabel">Enregistrer</string>
    <string name="cancelButtonLabel">Annuler</string>
    <string name="nextButtonLabel">Next >> </string>

    <!-- Account information dialogs -->
    <string name="firstNameLabel">Prénom </string>
    <string name="lastNameLabel">Nom </string>

    <!-- Waiting Dialog -->
    <string name="waitingDialogTitle">Traitement en cours</string>
    <string name="wiatingDialogMessage">Attendez qu\'il se termine.</string>
    <string name="waitingMessage">Traitement en cours.Attendez qu\'il se termine.</string>

    <!-- Spinners -->
    <string-array name="civility_array">
        <item>Mr</item>
        <item>M</item>
        <item>Mlle</item>
    </string-array>
    <string-array name="role_array">
        <item>Role 1</item>
        <item>Role 2</item>
    </string-array>
    <string-array name="type_array">
        <item>Type 1</item>
        <item>Type 2</item>
    </string-array>

    <!-- Service And associatedIntents Constants -->
    <string name="updateServiceNotificationMessage">L\'application JCertif met à jour ses données</string>
    <string name="updateServiceStopMessage">L\'application JCertif a fini la mise à jour des données</string>
    <string name="speakerUpdater">speakers Updater</string>
    <string name="eventUpdater">events Updater</string>
    <string name="staredEventsUpdater">stared events Updater</string>

</resources>