<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/violet"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textError"
        style="@style/error_message_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="gone" />

    <EditText
        android:id="@+id/txtEmail"
        style="@style/edt_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailLabel" >

        <EditText
            android:id="@+id/txtEmailConfirmation"
            style="@style/edt_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailConfirmationLabel" />

        <EditText
            android:id="@+id/txtPassword"
            style="@style/edt_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordLabel" />

        <EditText
            android:id="@+id/txtPasswordConfirmation"
            style="@style/edt_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordConfirmationLabel" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnCancel"
                style="@style/btn_style"
                android:text="@string/cancelButtonLabel" />

            <Button
                android:id="@+id/btnNext"
                style="@style/btn_style"
                android:text="@string/nextButtonLabel" />
        </LinearLayout>
    </EditText>

</LinearLayout>